// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Circle should render 1`] = `
<div>
  <div
    class="sc-AxjAm Stfdu"
  />
</div>
`;

exports[`Circle should render as avatar 1`] = `
<div>
  <div
    class="sc-AxjAm hqCcv"
  />
</div>
`;

exports[`Circle should render as blank 1`] = `
<div>
  <div
    class="sc-AxjAm Stfdu"
  />
</div>
`;

exports[`Circle should render large 1`] = `
<div>
  <div
    class="sc-AxjAm llJMlK"
  />
</div>
`;

exports[`Circle should render small 1`] = `
<div>
  <div
    class="sc-AxjAm kIBzVz"
  />
</div>
`;

exports[`Circle should render with content 1`] = `
<div>
  <div
    class="sc-AxjAm kIBzVz"
  >
    <div
      data-testid="circle__content"
    />
  </div>
</div>
`;

exports[`Circle should render with no shadow 1`] = `
<div>
  <div
    class="sc-AxjAm jDAceZ"
  />
</div>
`;
